--- a/public/scanner.html
+++ b/public/scanner.html
@@ -195,11 +195,11 @@
     /* Arb Finder Tables */
     .arb-table,.diff-table{overflow-x:auto}
     .arb-table-header,.diff-table-header{display:grid;gap:12px;padding:14px 16px;background:var(--bg);border-radius:8px;font-size:11px;font-weight:600;text-transform:uppercase;color:var(--t3);margin-bottom:8px}
-    .arb-table-header{grid-template-columns:2fr 1.2fr 1fr 1fr 0.8fr 0.6fr}
+    .arb-table-header{grid-template-columns:2fr 1.2fr 1fr 1fr 0.8fr 1fr}
     .diff-table-header{grid-template-columns:1.5fr 1fr 0.8fr 0.8fr 0.6fr}
     .arb-row,.diff-row{display:grid;gap:12px;padding:16px;align-items:center;border-bottom:1px solid var(--border);transition:background .2s}
     .arb-row:hover,.diff-row:hover{background:rgba(255,255,255,0.02)}
-    .arb-row{grid-template-columns:2fr 1.2fr 1fr 1fr 0.8fr 0.6fr}
+    .arb-row{grid-template-columns:2fr 1.2fr 1fr 1fr 0.8fr 1fr}
     .diff-row{grid-template-columns:1.5fr 1fr 0.8fr 0.8fr 0.6fr}
     .arb-event{display:flex;align-items:center;gap:12px}
     .arb-event-icon{width:36px;height:36px;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:16px}
@@ -212,7 +212,12 @@
     .arb-price .platform.poly{color:var(--purple)}
     .arb-price .price{font-family:var(--mono);font-size:15px;font-weight:600}
     .arb-profit{font-family:var(--mono);font-size:14px;font-weight:600;color:var(--green)}
-    .arb-roi{font-family:var(--mono);font-size:14px;font-weight:700;color:var(--green);background:var(--green-dim);padding:6px 10px;border-radius:6px;text-align:center}
+    .arb-links{display:flex;gap:8px}
+    .arb-link{display:inline-flex;align-items:center;gap:4px;padding:6px 10px;border-radius:6px;font-size:11px;font-weight:600;text-decoration:none;transition:all .2s}
+    .arb-link.kalshi{background:rgba(96,165,250,0.15);color:var(--blue)}
+    .arb-link.kalshi:hover{background:rgba(96,165,250,0.3)}
+    .arb-link.poly{background:rgba(192,132,252,0.15);color:var(--purple)}
+    .arb-link.poly:hover{background:rgba(192,132,252,0.3)}
     .diff-event{font-size:13px;font-weight:500}
     .diff-outcome{font-size:12px;color:var(--t2)}
     .diff-kalshi,.diff-poly{font-family:var(--mono);font-size:14px;font-weight:500}
@@ -554,7 +559,7 @@
               <span>Buy YES</span>
               <span>Buy NO</span>
               <span>Net Profit</span>
-              <span>ROI</span>
+              <span>Trade</span>
             </div>
             <div id="arb-opportunities">
               <!-- Presidential Election -->
@@ -576,7 +581,10 @@
                   <span class="price">56¢</span>
                 </div>
                 <div class="arb-profit">+3.2¢</div>
-                <div class="arb-roi">5.8%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/pres" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/elections" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
               <!-- Super Bowl -->
               <div class="arb-row">
@@ -597,7 +605,10 @@
                   <span class="price">71¢</span>
                 </div>
                 <div class="arb-profit">+2.8¢</div>
-                <div class="arb-roi">4.9%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/sports" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/sports" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
               <!-- Bitcoin -->
               <div class="arb-row">
@@ -618,7 +629,10 @@
                   <span class="price">29¢</span>
                 </div>
                 <div class="arb-profit">+2.2¢</div>
-                <div class="arb-roi">3.1%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/crypto" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/crypto" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
               <!-- California Governor -->
               <div class="arb-row">
@@ -639,7 +653,10 @@
                   <span class="price">20¢</span>
                 </div>
                 <div class="arb-profit">+1.8¢</div>
-                <div class="arb-roi">2.7%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/politics" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/politics" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
               <!-- Oscar -->
               <div class="arb-row">
@@ -660,7 +677,10 @@
                   <span class="price">26¢</span>
                 </div>
                 <div class="arb-profit">+1.9¢</div>
-                <div class="arb-roi">2.8%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/entertainment" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/entertainment" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
               <!-- Fed Rate -->
               <div class="arb-row">
@@ -681,7 +701,10 @@
                   <span class="price">46¢</span>
                 </div>
                 <div class="arb-profit">+1.3¢</div>
-                <div class="arb-roi">1.9%</div>
+                <div class="arb-links">
+                  <a href="https://kalshi.com/markets/fed" target="_blank" class="arb-link kalshi">Kalshi ↗</a>
+                  <a href="https://polymarket.com/economics" target="_blank" class="arb-link poly">Poly ↗</a>
+                </div>
               </div>
             </div>
           </div>
